# rodi_gazebo

./: README.md
models/rodi/: model.config  model.sdf
models/rodi/meshes/: rodi_base.stl
plugins/rodi/: CMakeLists.txt  model_rodi.cc
world/: model_rodi.world
worlds/: model_rodi.world  multiple_rodi.world
